--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "joi-model",
   "description": "Model generation based on Joi schema validation",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "repository": {
     "type": "git",
     "url": "git://github.com/hughepaul/joi-model"
@@ -27,7 +27,7 @@
   "contributors": [
     {
       "name": "Paul Winkler",
-      "email": "paul@paulwinkler.co.uk"
+      "email": "paul@hughe.co.uk"
     }
   ],
   "readmeFilename": "README.md",
